<?xml version="1.0"?>
<package format="3">
  <name>gnss_comm</name>
  <version>1.0.0</version>
  <description>Definitions and utility functions for GNSS</description>

  <maintainer email="shaozu.cao@gmail.com">CAO Shaozu</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gnss_comm_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>